--- a/src/app/modules/reports/affidavit-for-legal-heirs/affidavit-for-legal-heirs.component.html
+++ b/src/app/modules/reports/affidavit-for-legal-heirs/affidavit-for-legal-heirs.component.html
@@ -10,7 +10,8 @@
 
         </div>
     </div>
-
+    <div class="collapse show" id="collapseExample">
+        <div class="card card-body">
     <form [formGroup]="bufricationForm" class="kt-form kt-form--group-seperator-dashed">
 
         <div class="kt-form">
@@ -18,12 +19,11 @@
             <div class="kt-portlet__body">
 
                 <div class="col-lg-12">
-                    <div class="form-group kt-form__group row">
+                    <div class="flex" style="flex-wrap: wrap;">
 
-                        <div class="w-full">
                             <app-zone-branch-circle [form]="bufricationForm" [should_show_circle]="false" [is_required_circle]="false"
                                                     (branchZoneCircleData)="getAllData($event)"></app-zone-branch-circle>
-                        </div>
+
 
 <!--                        <div class="col-lg-6 kt-margin-bottom-20-mobile">-->
 <!--                            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">-->
@@ -35,12 +35,15 @@
 <!--                                <mat-datepicker #picker2></mat-datepicker>-->
 <!--                            </mat-form-field>-->
 <!--                        </div>-->
-
-                        <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                       <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">LC#</mat-label>
                                 <input matInput placeholder="Enter LC NO" formControlName="LcNo" maxlength="30" autocomplete="off" appNumberOnly/>
                             </mat-form-field>
+                        </div>
+                        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
+
+                            <button class="bg-gray-500" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
                         </div>
 
                     </div>
@@ -81,12 +84,11 @@
 
 
     </form>
-
-    <div class="form-group kt-form__group row">
-        <div class="col-lg-12 kt-margin-bottom-20-mobile mat-table mt-3 d-flex justify-between">
-            <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
-        </div>
     </div>
+    </div>
+    
+
+
 
 </div>
 
