--- a/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
+++ b/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
@@ -28,21 +28,13 @@
               color="primary" (click)="onSubmit()" [disabled]="viewLoading || submitted">
               <mat-icon class="mr-2">save</mat-icon> Save
               </button>
-              <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md ml-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial value="Cancel" [mat-dialog-close]="false">
-                <mat-icon class="mr-2">cancel</mat-icon> Close
+              <button type="button" class="ml-2" cdkFocusInitial value="Cancel" [mat-dialog-close]="false">
+                <mat-icon class="text-red-500">cancel</mat-icon>
               </button>
             </div>
 
         </div>
 
-
-
-        <div class="row py-3">
-
-          <div class="col-lg-12 col-sm-12 text-right">
-
-          </div>
-      </div>
 
       <!-- <div class="row pb-3">
         <div class="col-lg-12  flex " style="color: #01671B;">
@@ -62,7 +54,7 @@
         <div class="kt-form">
             <div class="kt-portlet__body">
                 <div class="row ">
-                    <div class="col-lg-12 col-md-12  mat-elevation-z8 p-3">
+                    <div class="col-lg-12 col-md-12  mat-elevation-z8 pt-0 p-3">
 
                         <input type="text" class="form-control mb-2" (keydown.enter)="$event.preventDefault()"
                                placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off"
@@ -75,7 +67,7 @@
                                  [mapTypeControl]="true"
                                  (mapReady)="onMapReady($event)"
                                  [restriction]="countryRestriction" 
-                                 style="height: 420px;">
+                                 style="height:75vh;">
                         </agm-map>
 
                     </div>
