--- a/src/app/modules/reports/daily-voucher-proof/daily-voucher-proof.component.html
+++ b/src/app/modules/reports/daily-voucher-proof/daily-voucher-proof.component.html
@@ -54,7 +54,7 @@
                                     <mat-label class="customMatLabel">Transaction Status<strong class="matMandatory">*</strong></mat-label>
                                     <mat-select formControlName="Status">
                                         <mat-option *ngFor="let lov of statusLov" [value]="lov.Value">
-                                            {{lov.Description}}
+                                            {{lov.Name}}
                                         </mat-option>
                                     </mat-select>
                                 </mat-form-field>
