--- a/src/app/modules/reports/voucher-posting-day/voucher-posting-day.component.html
+++ b/src/app/modules/reports/voucher-posting-day/voucher-posting-day.component.html
@@ -39,7 +39,7 @@
                         <div class="col-lg-6 kt-margin-bottom-20-mobile">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Voucher#</mat-label>
-                                <input matInput placeholder="Enter LC NO" formControlName="VoucherNo" maxlength="30" autocomplete="off" appNumberOnly/>
+                                <input matInput placeholder="Enter Voucher No" formControlName="VoucherNo" maxlength="30" autocomplete="off" appNumberOnly/>
                             </mat-form-field>
                         </div>
 
