--- a/src/app/modules/reports/affidavit-for-legal-heirs/affidavit-for-legal-heirs.component.html
+++ b/src/app/modules/reports/affidavit-for-legal-heirs/affidavit-for-legal-heirs.component.html
@@ -43,7 +43,7 @@
                         </div>
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
 
-                            <button class="bg-gray-500" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
+                            <button class="bg-gray-500"  mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
                         </div>
 
                     </div>
@@ -86,7 +86,7 @@
     </form>
     </div>
     </div>
-    
+
 
 
 
