--- a/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
+++ b/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
@@ -10,6 +10,7 @@
 
         </div>
     </div>
+    
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
     <form [formGroup]="bufricationForm" class="kt-form kt-form--group-seperator-dashed">
@@ -62,7 +63,7 @@
                         </mat-form-field>
                     </div>
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
-                        <button class="bg-gray-500" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
+                        <button class="bg-gray-500"  mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
                     </div>
                   </div>
 
