--- a/src/app/layout/common/change-password/change-password.component.html
+++ b/src/app/layout/common/change-password/change-password.component.html
@@ -1,6 +1,9 @@
 <div [formGroup]="change_password_form">
-    <button mat-icon-button (click)="close()" style="float:right">
-        <mat-icon>cancel</mat-icon>
+
+    <span class="text-md font-bold text-red-500" id="error_to_display"></span>
+    <span class="text-md font-bold text-green-500" id="success_to_display"></span>
+    <button  (click)="close()" style="float:right">
+        <mat-icon class="text-red-500">cancel</mat-icon>
     </button>
     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
         <input matInput type="password" placeholder="Old Password" formControlName="old_password"
@@ -12,10 +15,10 @@
         />
     </mat-form-field>
     <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
-        <input matInput type="password" placeholder="Change Password" formControlName="confirm_password"
+        <input class="w-full" matInput type="password" placeholder="Change Password" formControlName="confirm_password"
         />
     </mat-form-field>
 
 
-    <button mat-flat-button (click)="changePassword()" color="accent">Change Password</button>
+    <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" mat-flat-button (click)="changePassword()" color="accent">Change Password</button>
 </div>
