--- a/src/app/shared/crud/alert-dialog-capture/alert-dialog-capture.component.html
+++ b/src/app/shared/crud/alert-dialog-capture/alert-dialog-capture.component.html
@@ -5,11 +5,11 @@
       <div class="form-group">
 
         <div class="col-lg-12 text-center mt-1">
-          <img src="./assets/media/icons/checked-01.png" class="img-responsive center-block w-32 mx-auto" alt="icon" />
+          <img src="./assets/media/icons/alert.png" class="img-responsive center-block w-12 mx-auto" alt="icon" />
         </div>
 
         <div class="col-lg-12 text-center mt-3">
-          <span style="font-size: 24px !important; font-weight: 600 !important; color: #0f298f !important; text-align:center">Error Code:</span>
+          <span style="font-size: 12px !important; font-weight: 600 !important; color: red !important; text-align:center">Error Code:</span>
         </div>
         <div class="col-lg-12 text-center  mt-1">
           <span style="font-weight:500"></span>
@@ -19,7 +19,7 @@
     <div class="kt-portlet__foot kt-portlet__no-border kt-portlet__foot--fit text-center">
       <div class="kt-form__actions kt-form__actions--sm mt-4">
         <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
-        <button mat-button  class="btn btn-success btn-block" color="primary" cdkFocusInitial>OK</button>
+        <button mat-button  class="btn btn-success btn-block  bg-red-500 text-white" color="primary" cdkFocusInitial>OK</button>
       </div>
     </div>
   </div>
