--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -47,8 +47,8 @@
                             </div>
 
                             <div class="mr-8">
-                                <button mat-icon-button color="warn" (click)="deleteActivity(activity)">
-                                    <mat-icon>
+                                <button mat-icon-button  (click)="deleteActivity(activity)">
+                                    <mat-icon class="text-red-500">
                                         delete_forever
                                     </mat-icon>
                                 </button>
