--- a/src/app/zone-branch-circle/zone-branch-circle.component.html
+++ b/src/app/zone-branch-circle/zone-branch-circle.component.html
@@ -62,7 +62,7 @@
             </mat-form-field>
         </div>
     </div>
-    <a class="cursor-pointer text-md font-bold text-danger text-center text-danger position-absolute top-0.5 right-9 "
+    <a class="cursor-pointer text-md font-bold text-center text-red-500 position-absolute top-0.5 right-9 "
        (click)="clearForm()">Clear Filters</a>
 
 </div>
